new changhes for the ui and issues fix