@@ -1,10 +1,14 @@
 package com.rewardsapp.rewards_backend.controller;
 
+import com.rewardsapp.rewards_backend.dto.RewardDTO;
 import com.rewardsapp.rewards_backend.entity.Reward;
+import com.rewardsapp.rewards_backend.entity.Transaction;
 import com.rewardsapp.rewards_backend.repository.RewardRepository;
+import com.rewardsapp.rewards_backend.repository.TransactionRepository;
 import org.springframework.web.bind.annotation.*;
+
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/rewards")
@@ -12,33 +16,66 @@ import java.util.Optional;
 public class RewardController {
 
     private final RewardRepository rewardRepository;
+    private final TransactionRepository transactionRepository;
 
-    public RewardController(RewardRepository rewardRepository) {
+    public RewardController(RewardRepository rewardRepository, TransactionRepository transactionRepository) {
         this.rewardRepository = rewardRepository;
+        this.transactionRepository = transactionRepository;
     }
 
-    // GET all rewards
     @GetMapping
-    public List<Reward> getAllRewards() {
-        return rewardRepository.findAll();
+    public List<RewardDTO> getAllRewards() {
+        return rewardRepository.findAll().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
-    // GET rewards by customer
+
     @GetMapping("/customer/{customerId}")
-    public List<Reward> getRewardsByCustomer(@PathVariable Long customerId) {
-        return rewardRepository.findAll()
-                .stream()
+    public List<RewardDTO> getRewardsByCustomer(@PathVariable Long customerId) {
+        return rewardRepository.findAll().stream()
                 .filter(r -> r.getCustomerId().equals(customerId))
-                .toList();
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
-    // GET rewards by customer + month + year
+
     @GetMapping("/filter")
-    public Reward getRewardByCustomerAndMonthYear(
+    public RewardDTO getRewardByCustomerAndMonthYear(
             @RequestParam Long customerId,
             @RequestParam int month,
             @RequestParam int year) {
-        return rewardRepository.findByCustomerIdAndMonthAndYear(customerId, month, year)
+
+        Reward reward = rewardRepository.findByCustomerIdAndMonthAndYear(customerId, month, year)
                 .orElseThrow(() -> new RuntimeException("No rewards found for given filters"));
+
+        return convertToDTO(reward);
+    }
+
+    // ---------------------- Helper ----------------------
+    private RewardDTO convertToDTO(Reward reward) {
+        List<Transaction> transactions = transactionRepository.findByCustomerIdAndMonthAndYear(
+                reward.getCustomerId(),
+                reward.getMonth(),
+                reward.getYear()
+        );
+
+        List<RewardDTO.TransactionInfo> transactionInfos = transactions.stream()
+                .map(t -> new RewardDTO.TransactionInfo(
+                        t.getId(),
+                        t.getPurchaseAmount(),
+                        t.getPurchaseDate()
+                ))
+                .collect(Collectors.toList());
+
+        return new RewardDTO(
+                reward.getCustomerId(),
+                reward.getMonth(),
+                reward.getYear(),
+                reward.getTotalPoints(),
+                transactionInfos
+        );
     }
 }
+
+
